# batch-deployment-motherduck-modal

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
scripts/: inference.py
src/batch_deployment_motherduck_modal/: __init__.py
