[project]
authors         = [{name = "Murilo Cunha", email = "murilo@dataroots.io"}]
dependencies    = [
    "duckdb==0.9.2",
    "transformers[torch]>=4.38.2",
]
description     = "Add your description here"
name            = "batch-deployment-motherduck-modal"
readme          = "README.md"
requires-python = "== 3.11.*"
version         = "3.11"

[build-system]
build-backend = "hatchling.build"
requires      = ["hatchling"]

[tool.rye]
dev-dependencies = [
    "modal>=0.61.45",
]
managed          = true

[tool.rye.scripts]
infer = "modal run scripts/inference.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/batch_deployment_motherduck_modal"]
